feat: authentication and authorization
